[project]
name = "venhance"
version = "0.1.0"
description = "AI video enhancer CLI for Apple Silicon — frame interpolation (RIFE) and super-resolution (Real-ESRGAN) with native MPS inference and VideoToolbox encoding"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tomohiro Aota" }]
requires-python = ">=3.12"
keywords = [
    "video",
    "frame-interpolation",
    "super-resolution",
    "rife",
    "real-esrgan",
    "apple-silicon",
    "mps",
    "ffmpeg",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
venhance = "venhance.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/venhance"]
